--- a/studentregister/src/main/webapp/index.html
+++ b/studentregister/src/main/webapp/index.html
@@ -1,13 +1,23 @@
-<%@page contentType="text/html" pageEncoding="UTF-8"%>
+
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
    "http://www.w3.org/TR/html4/loose.dtd">
 
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>JSP Page</title>
+        <script src="js/jquery-1.12.3.js"></script>
+         <script src="js/getall.js"></script>
+      
+   <style>
+   </style>
     </head>
     <body>
-        <h1>Hello World!</h1>
+    <h3>Student Attandence Management</h3>
+      <li><button id="register">StudentRegister</button></li>
+      <li><button id="alldetails">StudentsDetails</button></li>
+
+        <div>
+        
+        </div>
     </body>
 </html>
