--- a/studentregister/src/main/webapp/all.html
+++ b/studentregister/src/main/webapp/all.html
@@ -3,12 +3,21 @@
 <head>
 <script src="js/jquery-1.12.3.js"></script>
         <script src="js/student.js"></script>
-          <script src="js/getall.js"></script>
+          <script src="js/stugetall.js"></script>
 <link rel="stylesheet" type="text/css" href="css/student.css"/>
 
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
+<div id="student">
+    <h3 >Student Attandence Management</h3>
+    <center>
+      <li><button id="register"><a href="home.html">StudentRegister</a></button></li>
+    <li><button id="register"><a href="all.html">Studentdeatails</a></button></li>
+    <li><button id="register"><a href="class.html">ClassDetails</a></button></li>
+    <li><button id="register"><a href="attandance.html">AttandanceDetails</a></button></li>
+    </center>
+</div>
 <body>
  <div class="details"></div>
 </body>
