--- a/studentregister/src/main/webapp/index.html
+++ b/studentregister/src/main/webapp/index.html
@@ -7,17 +7,20 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <script src="js/jquery-1.12.3.js"></script>
          <script src="js/getall.js"></script>
+           <link rel="stylesheet" type="text/css" href="css/student.css"/>
       
    <style>
    </style>
     </head>
     <body>
-    <h3>Student Attandence Management</h3>
-      <li><button id="register">StudentRegister</button></li>
-      <li><button id="alldetails">StudentsDetails</button></li>
-
-        <div>
-        
-        </div>
+   <div id="student">
+    <h3 >Student Attandence Management</h3>
+    <center>
+      <li><button ><a href="home.html">StudentRegister</a></button></li>
+    <li><button ><a href="all.html">Studentdeatails</a></button></li>
+    <li><button ><a href="class.html">ClassDetails</a></button></li>
+    <li><button><a href="attandance.html">AttandanceDetails</a></button></li>
+    </center>
+</div>
     </body>
 </html>
