add change file

--- a/studentregister/src/main/webapp/attandance.html
+++ b/studentregister/src/main/webapp/attandance.html
@@ -22,8 +22,9 @@
 <label><input type="text" id="aId" placeholder="AttandenceId..*"/></label>
 <label><input type="text" id="classId" placeholder="ClassId..*"> </label><br><br>
 <label><input type="text" id="date" placeholder="Date..*"> </label>
-<label><input type="text" id="attan" placeholder="Present..*"> </label><br><br>
-<label><button id="submit">SUBMIT HERE!</button></label>
+ <label><input type="checkbox" name="attandance" value="yes">Present</label> 
+        <label><input type="checkbox" name="attandance" value="no">Absent</label>
+<label><input type="button" value="SUBMIT HERE!" id="submit"></label>
 </div>
 <div class="attandance"></div>
 </center>
