--- a/studentregister/src/main/webapp/gender.html
+++ b/studentregister/src/main/webapp/gender.html
@@ -1,15 +1,17 @@
-<html>
-<head></head>
- <script src="js/jquery-1.12.3.js"></script>
-         <script src="js/gender.js"></script>
-<body>
-<form >
-    <input  type="radio" name="gender"  value="Male" id="aa" >male
-    <br />
-    <input type="radio" name="gender"  value="Female" id="aa"> Female
-    <br />
-    <input type="button" value="submit" id="subm" /></form>
-
-
-</body>
-</html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+ <html>
+ <head>
+ <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<title>Insert title here</title>
+ <script type="text/javascript" src="js/jquery-1.12.3.js"></script>
+ <script type="text/javascript" src="js/gender.js"></script>
+ </head>
+ <body>
+ <h4>Please select your gender.</h4>
+     <p> 
+        <label><input type="checkbox" name="attandance" value="yes">Present</label> 
+        <label><input type="checkbox" name="attandance" value="no">Absent</label>
+     </p>
+     <p><input type="button" value="Get Value"></p>
+ </body>
+ </html> 
