add change file

--- a/studentregister/src/main/webapp/attandance.html
+++ b/studentregister/src/main/webapp/attandance.html
@@ -9,22 +9,22 @@
  <div id="student">
     <h3 >Student Attandence Management</h3>
     <center>
-      <li><button id="register"><a href="home.html">StudentRegister</a></button></li>
-    <li><button id="register"><a href="all.html">Studentdeatails</a></button></li>
-    <li><button id="register"><a href="class.html">ClassDetails</a></button></li>
-    <li><button id="register"><a href="attandance.html">AttandanceDetails</a></button></li>
+      <li><button id="register" ><a href="home.html">StudentRegister</a></button></li>
+    <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
+    <li><button id="register" ><a href="class.html">ClassDetails</a></button></li>
+    <li><button id="register" class="active"><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
        
 <center>
 <div class='present'>
 
-<label><input type="text" id="aId" placeholder="AttandenceId..*"/></label>
-<label><input type="text" id="classId" placeholder="ClassId..*"> </label><br><br>
-<label><input type="text" id="date" placeholder="Date..*"> </label>
- <label><input type="checkbox" name="attandance" value="yes">Present</label> 
-        <label><input type="checkbox" name="attandance" value="no">Absent</label>
-<label><input type="button" value="SUBMIT HERE!" id="submit"></label>
+<label><input type="text" id="aId" placeholder="AttandenceId..*"/></label><br><br>
+<label><input type="text" id="classId" placeholder="ClassId..*"> </label>
+<label><input type="text" id="date" placeholder="Date..*"> </label><br><br>
+ <label><input type="checkbox" name="attandance" value="yes" id="ab">Present</label> 
+<label><input type="checkbox" name="attandance" value="no" id="ab">Absent</label><br><br>
+<label><input type="button" value="SUBMIT HERE!" id="submit" ></label>
 </div>
 <div class="attandance"></div>
 </center>
