--- a/studentregister/src/main/webapp/home.html
+++ b/studentregister/src/main/webapp/home.html
@@ -10,10 +10,10 @@
  <div id="student">
     <h3 >Student Attandence Management</h3>
     <center>
-      <li><button ><a href="home.html">StudentRegister</a></button></li>
-    <li><button ><a href="all.html">Studentdeatails</a></button></li>
-    <li><button ><a href="class.html">ClassDetails</a></button></li>
-    <li><button ><a href="attandance.html">AttandanceDetails</a></button></li>
+      <li><button id="register" class="active"><a href="home.html">StudentRegister</a></button></li>
+    <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
+    <li><button id="register" ><a href="class.html">ClassDetails</a></button></li>
+    <li><button id="register" ><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
        
