add new stuentcourse file

--- a/studentregister/src/main/webapp/attandance.html
+++ b/studentregister/src/main/webapp/attandance.html
@@ -11,7 +11,8 @@
     <center>
       <li><button id="register" ><a href="home.html">StudentRegister</a></button></li>
     <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
-    <li><button id="register" ><a href="class.html">ClassDetails</a></button></li>
+    <li><button id="register" ><a href="course.html">CourseDetails</a></button></li>
+      <li><button id="register" ><a href="Studentcourse.html">StudentCourse</a></button></li>
     <li><button id="register" class="active"><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
@@ -19,8 +20,8 @@
 <center>
 <div class='present'>
 
-<label><input type="text" id="aId" placeholder="AttandenceId..*"/></label><br><br>
-<label><input type="text" id="classId" placeholder="ClassId..*"> </label>
+<label><input type="text" id="sId" placeholder="StudentId..*"/></label><br><br>
+<label><input type="text" id="couId" placeholder="CourseId..*"> </label>
 <label><input type="text" id="date" placeholder="Date..*"> </label><br><br>
  <label><input type="checkbox" name="attandance" value="yes" id="ab">Present</label> 
 <label><input type="checkbox" name="attandance" value="no" id="ab">Absent</label><br><br>
