--- a/studentregister/src/main/webapp/course.html
+++ b/studentregister/src/main/webapp/course.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <script src="js/jquery-1.12.3.js"></script>
-        <script src="js/class.js"></script>
-        <script src="js/classall.js"></script>
+        <script src="js/course.js"></script>
+        <script src="js/courseall.js"></script>
         <link rel="stylesheet" type="text/css" href="css/student.css"/>
 </head>
 <body>
@@ -11,7 +11,7 @@
     <center>
       <li><button id="register" ><a href="home.html">StudentRegister</a></button></li>
     <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
-    <li><button id="register" class="active"><a href="class.html">ClassDetails</a></button></li>
+    <li><button id="register" class="active"><a href="course.html">CourseDetails</a></button></li>
     <li><button id="register" ><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
@@ -19,13 +19,12 @@
 <center>
 <div class="standard">
 
-<label><input type="text" id="classId" placeholder="ClassId..*"/></label><br><br>
-<label><input type="text" id="stuId" placeholder="StudentId..*"> </label><br><br>
-<label><input type="text" id="clname" placeholder="ClassName..*"> </label><br><br>
+<label><input type="text" id="courseId" placeholder="CourseId..*"> </label><br><br>
+<label><input type="text" id="crname" placeholder="CourseName..*"> </label><br><br>
 <label><input type="text" id="duration" placeholder="Duration..*"> </label><br><br>
 <label><button id="subm">SUBMIT HERE!</button></label>
 </div>
-<div class="classall"></div>
+<div class="courseall"></div>
 </center>
 </body>
 </html>
