--- a/studentregister/src/main/webapp/all.html
+++ b/studentregister/src/main/webapp/all.html
@@ -15,6 +15,7 @@
       <li><button id="register" ><a href="home.html">StudentRegister</a></button></li>
     <li><button id="register" class="active"><a href="all.html">Studentdeatails</a></button></li>
     <li><button id="register" ><a href="class.html">ClassDetails</a></button></li>
+      <li><button id="register" ><a href="Studentcourse.html">StudentCourse</a></button></li>
     <li><button id="register" ><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
