--- a/studentregister/src/main/webapp/home.html
+++ b/studentregister/src/main/webapp/home.html
@@ -12,7 +12,8 @@
     <center>
       <li><button id="register" class="active"><a href="home.html">StudentRegister</a></button></li>
     <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
-    <li><button id="register" ><a href="class.html">ClassDetails</a></button></li>
+    <li><button id="register" ><a href="course.html">CourseDetails</a></button></li>
+      <li><button id="register" ><a href="Studentcourse.html">StudentCourse</a></button></li>
     <li><button id="register" ><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
