--- a/studentregister/src/main/webapp/index.html
+++ b/studentregister/src/main/webapp/index.html
@@ -16,10 +16,11 @@
    <div id="student">
     <h3 >Student Attandence Management</h3>
     <center>
-      <li><button id="register" class="active"><a href="home.html">StudentRegister</a></button></li>
-    <li><button id="register" class="active"><a href="all.html">Studentdeatails</a></button></li>
-    <li><button id="register" class="active"><a href="class.html">ClassDetails</a></button></li>
-    <li><button id="register" class="active"><a href="attandance.html">AttandanceDetails</a></button></li>
+      <li><button id="register" ><a href="home.html">StudentRegister</a></button></li>
+    <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
+    <li><button id="register" ><a href="course.html">CourseDetails</a></button></li>
+      <li><button id="register"><a href="Studentcourse.html">StudentCourse</a></button></li>
+    <li><button id="register" ><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
     </body>
