--- a/studentregister/src/main/webapp/course.html
+++ b/studentregister/src/main/webapp/course.html
@@ -12,6 +12,7 @@
       <li><button id="register" ><a href="home.html">StudentRegister</a></button></li>
     <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
     <li><button id="register" class="active"><a href="course.html">CourseDetails</a></button></li>
+        <li><button id="register" ><a href="coursedetail.html">StudentCourse</a></button></li>
     <li><button id="register" ><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
