--- a/studentregister/src/main/webapp/index.html
+++ b/studentregister/src/main/webapp/index.html
@@ -19,9 +19,10 @@
       <li><button id="register" ><a href="home.html">StudentRegister</a></button></li>
     <li><button id="register" ><a href="all.html">Studentdeatails</a></button></li>
     <li><button id="register" ><a href="course.html">CourseDetails</a></button></li>
-      <li><button id="register"><a href="Studentcourse.html">StudentCourse</a></button></li>
+      <li><button id="register"><a href="coursedetail.html">StudentCourse</a></button></li>
     <li><button id="register" ><a href="attandance.html">AttandanceDetails</a></button></li>
     </center>
 </div>
+<div class="studentcourseall"></div>
     </body>
 </html>
