exchange value in boolean

--- a/studentregister/src/main/webapp/attandance.html
+++ b/studentregister/src/main/webapp/attandance.html
@@ -23,8 +23,8 @@
 <label><input type="text" id="sId" placeholder="StudentId..*"/></label><br><br>
 <label><input type="text" id="couId" placeholder="CourseId..*"> </label>
 <label><input type="text" id="date" placeholder="Date..*"> </label><br><br>
- <label><input type="checkbox" name="attandance" value="yes" id="ab">Present</label> 
-<label><input type="checkbox" name="attandance" value="no" id="ab">Absent</label><br><br>
+ <label><input type="checkbox" name="attendance" value="present" id="ab">Present</label> 
+<label><input type="checkbox" name="attendance" value="absent" id="ab">Absent</label><br><br>
 <label><input type="button" value="SUBMIT HERE!" id="submit" ></label>
 </div>
 <div class="attandance"></div>
